<resources>

    <string name="hello_Material_fragment">Hello Material blank fragment</string>
    <string name="hello_Budget_fragment">Hello Budget blank fragment</string>

    <string name="no_reforms">No reform registered</string>

    <string name="reform_register">Reform Register</string>
    <string name="daily_register">Daily Register</string>
    <string name="material_register">Material Register</string>
    <string name="btn_register">Register</string>
    <string name="btn_cancel">Cancel</string>

    <string name="budget_spent">Spent</string>
    <string name="budget_budget">Budget</string>
    <string name="txt_material_name">Material</string>
    <string name="txt_unit">Unit</string>
    <string name="txt_value">Value</string>
    <string name="txt_quantity">Quantity</string>
    <string name="txt_unit_value">Unit value</string>
    <string name="txt_choose_room">Room:</string>
    <string name="txt_choose_days">Days:</string>
    <string name="txt_choose_budget">Budget:</string>

    <string name="budget_remaining">Remaining</string>
    <string name="appwidget_text">AG Daily</string>
    <string name="add_widget">Add widget</string>
    
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="txt_about">If you are planning to reform your house or build something big or complex and need to control
        every part of your budget, don’t worry.AG daily will help you because it provides aneasy, clean and detailed way of
        monitoring your budget without being afraid with the amount of materials or the reform delay.</string>
    <string name="txt_author_thankful">All icons were made by https://www.flaticon.com/authors/freepik from https://www.flaticon.com/</string>
    <string name="txt_license">www.flaticon.com is licensed by http://creativecommons.org/licenses/by/3.0/</string>

    <string name="reform_added">Reform has been added</string>
    <string name="material_added">Material has been added</string>
    <string name="daily_added">Daily has been added</string>

    <string name="no_material">No material registered</string>
    <string name="no_daily">No daily registered</string>

</resources>
