<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txt_material_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="@string/txt_material_name"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_material"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:text="Text"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/txt_material_name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_unit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/txt_unit"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/txt_material_name"
        app:layout_constraintTop_toBottomOf="@+id/txt_material_name" />

    <TextView
        android:id="@+id/txt_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="Text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/txt_material"
        app:layout_constraintTop_toBottomOf="@+id/txt_material" />

    <TextView
        android:id="@+id/txt_value_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/txt_value"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/txt_unit_name"
        app:layout_constraintTop_toBottomOf="@+id/txt_unit_name" />

    <TextView
        android:id="@+id/txt_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="Text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/txt_unit"
        app:layout_constraintTop_toBottomOf="@+id/txt_unit" />

</android.support.constraint.ConstraintLayout>